crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__conditional_types-2.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"type Flatten<Type> = Type extends Array<infer Item> ? Item : Type;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 66,
                    },
                },
                span: 0..66,
                kind: TypeDecl(
                    TypeDecl {
                        declare: false,
                        id: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 5,
                                },
                                end: Position {
                                    line: 0,
                                    column: 12,
                                },
                            },
                            span: 5..12,
                            name: "Flatten",
                        },
                        type_ann: TypeAnn {
                            kind: Conditional(
                                ConditionalType {
                                    check_type: TypeAnn {
                                        kind: TypeRef(
                                            TypeRef {
                                                name: "Type",
                                                type_args: None,
                                            },
                                        ),
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 21,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 25,
                                            },
                                        },
                                        span: 21..25,
                                        inferred_type: None,
                                    },
                                    extends_type: TypeAnn {
                                        kind: TypeRef(
                                            TypeRef {
                                                name: "Array",
                                                type_args: Some(
                                                    [
                                                        TypeAnn {
                                                            kind: Infer(
                                                                InferType {
                                                                    name: "Item",
                                                                },
                                                            ),
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 40,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 50,
                                                                },
                                                            },
                                                            span: 40..50,
                                                            inferred_type: None,
                                                        },
                                                    ],
                                                ),
                                            },
                                        ),
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 34,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 51,
                                            },
                                        },
                                        span: 34..51,
                                        inferred_type: None,
                                    },
                                    true_type: TypeAnn {
                                        kind: TypeRef(
                                            TypeRef {
                                                name: "Item",
                                                type_args: None,
                                            },
                                        ),
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 54,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 58,
                                            },
                                        },
                                        span: 54..58,
                                        inferred_type: None,
                                    },
                                    false_type: TypeAnn {
                                        kind: TypeRef(
                                            TypeRef {
                                                name: "Type",
                                                type_args: None,
                                            },
                                        ),
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 61,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 65,
                                            },
                                        },
                                        span: 61..65,
                                        inferred_type: None,
                                    },
                                },
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 21,
                                },
                                end: Position {
                                    line: 0,
                                    column: 65,
                                },
                            },
                            span: 21..65,
                            inferred_type: None,
                        },
                        type_params: Some(
                            [
                                TypeParam {
                                    span: 13..17,
                                    name: Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 17,
                                            },
                                        },
                                        span: 13..17,
                                        name: "Type",
                                    },
                                    constraint: None,
                                    default: None,
                                },
                            ],
                        ),
                    },
                ),
            },
        ],
    },
)
